# airflow-project

./: .env  .pre-commit-config.yaml  docker-compose.yml  noxfile.py  pyproject.toml
dags/: exampledag.py  hello_world.py
