[project]
name = "airflow-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.2",
]
